# jeevan-alert-ai

./: .gitignore  README.md  docker-compose.yml  download_models.py  jeevenalert_ai.html
ai_models/finetuned/isic-medgemma/: Modelfile
ai_models/finetuned/medgemma-chw/: Modelfile
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  refactor.py
backend/app/agents/: competition_eval.py
backend/app/api/: schemas.py
backend/app/api/v1/: analytics.py  auth.py  encounters.py  observations.py  offline_sync.py  patients.py  skin_analysis.py  system_testing.py
backend/app/clinical_ai/domain/: registry.py  state.py  tools.py
backend/app/clinical_ai/orchestrator/: agent.py  executor.py  graph.py  progress.py
backend/app/clinical_ai/routers/: chat_router.py  workflow_router.py
backend/app/clinical_ai/tools/: medgemma_adapters.py
backend/app/clinical_ai/utils/: toolkit.py
backend/app/core/: config.py  database.py  medgemma_tools.py  output_parser.py
backend/app/models/: __init__.py  chw_staff.py  device_sync.py  encounter.py  observation.py  patient.py
backend/tests/: conftest.py  test_api.py  test_workflow.py
fine-tuning/chw-finetuning/: finetuning-medgemma.ipynb  generate_tool_aligned_dataset.py  training_data_tool_aligned_test.jsonl  training_data_tool_aligned_train.jsonl
fine-tuning/isic_finetuning/: isic_finetune_kaggle.ipynb  predictions.csv  requirements-isic.txt
frontend/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
(+26 files in other folders)
